# sparkle

./: .editorconfig  Cargo.toml  LICENSE.txt  Makefile  README.md  Xargo.toml  clippy.toml  rust-toolchain.toml  x86_64-sparkle.json  x86_64-unknown-none.json
.cargo/: config.toml
docs/notes/: mman.md  primitives.md  syscalls.md
kamaji/: Cargo.toml
kamaji/src/: lib.rs  main.rs  qemu.rs  term.rs
lib/alloc/bump/: Cargo.toml
lib/alloc/bump/src/: lib.rs
lib/once/: Cargo.toml
lib/once/src/: lib.rs
src/: alloca.rs  consts.rs  lib.rs  logger.rs  macros.rs  main.rs  misc.rs  panic.rs
src/arch/: mod.rs
src/arch/x86_64/: bits.rs  boot.asm  grub.cfg  interrupts.rs  linker.ld  long.asm  mod.rs  multiboot.asm  ports.rs
src/arch/x86_64/bload/: boot.asm  long.asm
src/arch/x86_64/device/: mod.rs  pic.rs  pit.rs  serial.rs  vga_console.rs
src/arch/x86_64/interrupts/: gdt.rs  mod.rs
src/arch/x86_64/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
src/arch/x86_64/memory/paging/: entry.rs  frame.rs  frame_allocators.rs  mapper.rs  mod.rs  page.rs  table.rs  temporary_page.rs
