[package]
name = "sparkle_os"
version = "0.1.0"
authors = ["Erin Moon <erin@hashbang.sh>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2"
spin = "0.4.6"
x86_64 = "0.1.2"
multiboot2 = "0.7"
bitflags = "1.0"
linked_list_allocator = "0.6"
raw-cpuid = "4.0"
bit_field = "0.9"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.once]
path = "lib/once"

[features]
default = ["logging-serial", "logging-console", "panic-serial", "panic-console"]
logging-serial = []
logging-console = []
panic-serial = []
panic-console = []
