[package]
name = "sparkle_os"
version = "0.1.0"
authors = ["Erin Moon <erin@hashbang.sh>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
volatile = "0.2.6"
spin = "0.5.0"
x86_64 = "0.7.4"
multiboot2 = "0.8.1"
bitflags = "1.1.0"
linked_list_allocator = "0.6.4"
raw-cpuid = "6.1.0"
bit_field = "0.10.0"

[dependencies.log]
version = "0.4.8"
default-features = false

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.once]
path = "lib/once"

[features]
default = ["logging-serial", "logging-console", "panic-serial", "panic-console"]
logging-serial = []
logging-console = []
panic-serial = []
panic-console = []
